--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,6 @@ consumer:
   key: "ZU3qJCmCi97rITfeAD50OypBb"
   secret: "YVgd2dfifmeYtWRJ2x38PjanqDChsVyKSGt89HKfdPJVHINXsP"
 access_token:
-  token: '1245812496-1Xsck79ggyvxeVt7yJWZpg2pm8OSnnRFdrdc0u3'
-  secret: 'CEMKA324hExbNvUDwnukgK3g4v62XmYrySDlrOSSnlVJd' 
+  token: '<ACCESS TOKEN>'
+  secret: '<ACCESS TOKEN SECRET>'
 
-tweet: 'hisa prpr'
